# MathLib

./: .clang-format  .gitattributes  CMakeLists.txt  architheture.txt  build.bat  build.sh  commit.bat
glad/src/: glad.c
include/glad/: glad.h
main/: init.cpp
main/key/: KeyInputHandler.h
main/math/: ComplexNumber.h  MathUtils.cpp  MathUtils.h
main/math/calculus/: Derivation.h
main/math/curves/: Curve.h  Dynamic2DCurve.h  Dynamic3DCurve.h  ICurve.h  Static2DCurve.h  Static3DCurve.h
main/math/easing/: EasingStyle.h
main/math/parameters/: ConstantColor.h  ConstantColorParam.h  ConstantRenderParams.h  DynamicColorParam.h  IColor.h  IRenderParams.h  Mode.h  TimeParameter.h
main/math/quaternions/: QuaternionF.h
main/math/surfaces/: Dynamic2DSurface.h  Dynamic3DSurface.h  ISurface.h  Static2DSurface.h  Static3DSurface.h
main/math/transformations/: ITransformation.h  LinearTransformation.h  Matrix3f.h  Transformation.h
main/math/vectors/: 2DVector.h  AbstractVector.h  IVector.h  Vector2D.h  Vector3D.h  Vector4D.h
main/rendering/: Line.h
main/rendering/renderable/: IRenderableInstance.h  Renderable2DCurve.h  Renderable2DFrag.h  Renderable2DInstance.h  Renderable2DObject.h  Renderable2DVertexState.h
main/rendering/screen/: AbstractScreen.h  IScreen.h  IScreen2D.h  IScreen3D.h  Screen2D.h  Screen3D.h
